--- a/Project/01_LED/Objects/01_LED.build_log.htm
+++ b/Project/01_LED/Objects/01_LED.build_log.htm
@@ -18,7 +18,7 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.113.0.0
 Dialog DLL:      DP51.DLL V2.64.0.0 
 <h2>Project:</h2>
-C:\Users\ZHJ\Desktop\lanqiao\IAP15F2K61S2\01_LED\01_LED.uvproj
+C:\Users\ZHJ\Desktop\lanqiao\IAP15F2K61S2\Project\01_LED\01_LED.uvproj
 Project File Date:  01/02/2020
 
 <h2>Output:</h2>
