--- a/Project/02_Digital_Tube_Static_Display/Objects/02_Digital_Tube_Static_Display.build_log.htm
+++ b/Project/02_Digital_Tube_Static_Display/Objects/02_Digital_Tube_Static_Display.build_log.htm
@@ -18,13 +18,15 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.113.0.0
 Dialog DLL:      DP51.DLL V2.64.0.0 
 <h2>Project:</h2>
-E:\Microcomputer\IAP15F2K61S2\02_Digital_Tube_Static_Display\02_Digital_Tube_Static_Display.uvproj
-Project File Date:  12/01/2019
+C:\Users\ZHJ\Desktop\lanqiao\IAP15F2K61S2\Project\02_Digital_Tube_Static_Display\02_Digital_Tube_Static_Display.uvproj
+Project File Date:  04/04/2020
 
 <h2>Output:</h2>
-Build target 'Target 1'
+Rebuild target 'Target 1'
+compiling main.c...
+compiling tube.c...
 linking...
-Program Size: data=9.0 xdata=0 code=126
+Program Size: data=11.0 xdata=0 code=136
 creating hex file from ".\Objects\02_Digital_Tube_Static_Display"...
 ".\Objects\02_Digital_Tube_Static_Display" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:01
