Update 04_Button Project

--- a/Project/03_Digital_Tube_Dynamic_Display/Objects/03_Digital_Tube_Dynamic_Display.build_log.htm
+++ b/Project/03_Digital_Tube_Dynamic_Display/Objects/03_Digital_Tube_Dynamic_Display.build_log.htm
@@ -18,16 +18,18 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.113.0.0
 Dialog DLL:      DP51.DLL V2.64.0.0 
 <h2>Project:</h2>
-E:\Microcomputer\IAP15F2K61S2\03_Digital_Tube_Dynamic_Display\03_Digital_Tube_Dynamic_Display.uvproj
-Project File Date:  12/01/2019
+C:\Users\ZHJ\Desktop\lanqiao\IAP15F2K61S2\Project\03_Digital_Tube_Dynamic_Display\03_Digital_Tube_Dynamic_Display.uvproj
+Project File Date:  04/04/2020
 
 <h2>Output:</h2>
-Build target 'Target 1'
+Rebuild target 'Target 1'
+compiling main.c...
+compiling tube.c...
 linking...
-Program Size: data=9.0 xdata=0 code=152
+Program Size: data=10.0 xdata=0 code=160
 creating hex file from ".\Objects\03_Digital_Tube_Dynamic_Display"...
 ".\Objects\03_Digital_Tube_Dynamic_Display" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
